--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #31186a;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
